Fix alignment of H2 in BlogDetail

--- a/src/components/blog/blogDetail.scss
+++ b/src/components/blog/blogDetail.scss
@@ -47,8 +47,8 @@
                 text-align:left;
                 color:black;
                 position: relative;
-                // padding-left:5%;
-                // padding-right:5%;
+                padding-left:5%;
+                padding-right:5%;
                 padding-top:8%;
             }
             h3{
